# googleTestDemo

./: CMakeLists.txt  README.md
file/: CMakeLists.txt
file/include/: file.h
file/src/: file.cpp  main.cpp
file/test/: CMakeLists.txt  file_test.cpp
